--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "pro-api-sdk",
+	"name": "auto-shape-arr",
 	"version": "1.3.2",
-	"description": "嘉立创EDA & EasyEDA 专业版扩展 API 开发工具",
-	"author": "JLCEDA <support@lceda.cn>",
+	"description": "尘零落心的插件工具",
+	"author": "尘零落心",
 	"license": "Apache-2.0",
 	"homepage": "https://pro.lceda.cn/",
 	"engines": {
