--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "auto-shape-arr",
 	"version": "1.3.2",
 	"description": "尘零落心的插件工具",
-	"author": "尘零落心",
+	"author": "落心",
 	"license": "Apache-2.0",
 	"homepage": "https://pro.lceda.cn/",
 	"engines": {
